<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/gradient_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dimen26sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:id="@id/txtTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/changepassword" android:textAllCaps="true" android:fontFamily="@font/utmaltergothic" android:textAlignment="center" />
        <TextView android:textSize="20.0sp" android:textColor="@color/colorOrgane" android:id="@id/txtSubTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hintchangepassword" android:fontFamily="@font/utmaltergothic" android:textAlignment="center" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen50dp" android:layout_marginRight="@dimen/dimen50dp" android:layout_centerInParent="true">
            <EditText android:textSize="@dimen/dimen14sp" android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edNewPassword" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen50dp" android:hint="@string/hintusername" android:drawableLeft="@drawable/ic_clock" android:inputType="textPassword" android:fontFamily="@font/myriad" android:textAlignment="center" />
            <EditText android:textSize="@dimen/dimen14sp" android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edReNewPassword" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:hint="@string/hintpassword" android:drawableLeft="@drawable/ic_key" android:inputType="textPassword" android:fontFamily="@font/myriad" android:textAlignment="center" />
            <Button android:textColor="@color/colorStart" android:id="@id/btnSavePassword" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen20dp" android:text="@string/save" android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>