<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/gradient_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen50dp" android:layout_marginRight="@dimen/dimen50dp">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:contentDescription="@string/fcm_fallback_notification_channel_label" />
        <EditText android:textSize="@dimen/dimen14sp" android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edUsername" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen50dp" android:hint="@string/hintusername" android:inputType="text" android:drawableStart="@drawable/ic_person" android:fontFamily="@font/myriad" android:textAlignment="center" />
        <EditText android:textSize="@dimen/dimen14sp" android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edPassword" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:hint="@string/hintpassword" android:inputType="textPassword" android:drawableStart="@drawable/ic_clock" android:fontFamily="@font/myriad" android:textAlignment="center" />
        <Button android:textStyle="bold" android:textColor="@color/colorStart" android:id="@id/btnLogin" android:background="@drawable/circle_edditext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen20dp" android:text="@string/login" android:textAllCaps="false" android:fontFamily="@font/myriad" />
    </LinearLayout>
    <TextView android:textStyle="bold" android:layout_gravity="bottom" android:id="@id/txtSercutity" android:padding="@dimen/dimen10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <ProgressBar android:layout_gravity="bottom|center" android:id="@id/progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" />
</FrameLayout>