<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/colorEnd" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView android:layout_width="75.0dip" android:layout_height="75.0dip" android:layout_marginTop="@dimen/dimen10dp" android:src="@drawable/icon_circle_user" />
        <TextView android:id="@id/txtUserName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen8dp" android:fontFamily="@font/altergothic" />
        <TextView android:id="@id/txtChannel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen10dp" android:fontFamily="@font/altergothic" />
    </LinearLayout>
    <android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/dimen20dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="start" android:id="@id/btnChangePassword" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/changepassword" android:textAllCaps="false" android:drawableStart="@drawable/ic_changepass" android:fontFamily="@font/altergothic" android:textAlignment="textStart" />
            <Button android:layout_gravity="start" android:id="@id/btnCheckCMND" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/about" android:textAllCaps="false" android:drawableStart="@drawable/baseline_assignment_ind_white_36" android:fontFamily="@font/altergothic" android:textAlignment="textStart" android:paddingStart="@dimen/dimen8dp" android:paddingEnd="@dimen/dimen8dp" />
            <Button android:layout_gravity="start" android:id="@id/btnCIB" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/about" android:textAllCaps="false" android:drawableStart="@drawable/baseline_account_balance_white_36" android:fontFamily="@font/altergothic" android:textAlignment="textStart" android:paddingStart="@dimen/dimen8dp" android:paddingEnd="@dimen/dimen8dp" />
            <Button android:layout_gravity="start" android:id="@id/btnCheckBlackList" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/blacklistpartner" android:textAllCaps="false" android:drawableStart="@drawable/baseline_not_interested_white_36" android:fontFamily="@font/altergothic" android:textAlignment="textStart" android:paddingStart="@dimen/dimen8dp" android:paddingEnd="@dimen/dimen8dp" />
            <Button android:layout_gravity="start" android:id="@id/btnChangeLaguage" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/language" android:textAllCaps="false" android:drawableStart="@drawable/ic_language" android:fontFamily="@font/altergothic" android:textAlignment="textStart" />
            <Button android:layout_gravity="start" android:id="@id/btnSercurityKey" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/language" android:textAllCaps="false" android:drawableStart="@drawable/baseline_security_white_36" android:fontFamily="@font/altergothic" android:textAlignment="textStart" android:paddingStart="@dimen/dimen8dp" android:paddingEnd="@dimen/dimen8dp" />
            <Button android:layout_gravity="start" android:id="@id/btnHelp" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/help" android:textAllCaps="false" android:drawableStart="@drawable/ic_help" android:fontFamily="@font/altergothic" android:textAlignment="textStart" />
            <Button android:layout_gravity="start" android:id="@id/btnAbout" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/about" android:textAllCaps="false" android:drawableStart="@drawable/ic_about" android:fontFamily="@font/altergothic" android:textAlignment="textStart" />
            <Button android:layout_gravity="start" android:id="@id/btnLogout" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp" android:text="@string/logout" android:textAllCaps="false" android:drawableStart="@drawable/ic_logout" android:fontFamily="@font/altergothic" android:textAlignment="textStart" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>