<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/city" android:scaleType="fitXY" />
    <LinearLayout android:orientation="horizontal" android:id="@id/toolbar" android:background="@color/colorGrayWhite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen8dp">
        <ImageButton android:id="@id/btnBack" android:background="@drawable/gradient_left_right_background" android:paddingLeft="@dimen/dimen10dp" android:paddingRight="@dimen/dimen10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" />
        <TextView android:textSize="@dimen/dimen16sp" android:textStyle="bold" android:textColor="@color/colorOrgane" android:layout_gravity="center" android:id="@id/txtTitle" android:paddingLeft="@dimen/dimen8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/changepassword" android:fontFamily="@font/myriad" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/dimen50dp" android:paddingTop="@dimen/dimen100dp" android:paddingRight="@dimen/dimen50dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/dimen16sp" android:textColor="@color/colorBlack" android:id="@id/txtCurrentPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen8dp" android:text="@string/currentpassword" />
            <TextView android:textColor="@color/colorOrgane" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" android:fontFamily="@font/myriad" />
        </LinearLayout>
        <EditText android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edCurrentPassword" android:background="@drawable/button_orange_background" android:paddingLeft="@dimen/dimen8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp">
            <TextView android:textSize="@dimen/dimen16sp" android:textColor="@color/colorBlack" android:id="@id/txtNewPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen8dp" android:text="@string/enternewpassword" />
            <TextView android:textColor="@color/colorOrgane" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" />
        </LinearLayout>
        <EditText android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edNewPassword" android:background="@drawable/button_orange_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:paddingStart="@dimen/dimen8dp" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen10dp">
            <TextView android:textSize="@dimen/dimen16sp" android:textColor="@color/colorBlack" android:id="@id/txtReEnCurrentPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen8dp" android:text="@string/reenternewpassword" />
            <TextView android:textColor="@color/colorOrgane" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="*" android:fontFamily="@font/myriad" />
        </LinearLayout>
        <EditText android:textColor="@color/colorBlack" android:textColorHint="@color/colorGrayWhite" android:id="@id/edReEnCurrentPassword" android:background="@drawable/button_orange_background" android:paddingLeft="@dimen/dimen8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <Button android:textSize="@dimen/dimen16sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:layout_gravity="center" android:id="@id/btnSavePassword" android:background="@drawable/button_gradient_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen20dp" android:text="@string/save" android:textAllCaps="false" android:textAlignment="center" />
    </LinearLayout>
    <FrameLayout android:layout_gravity="bottom" android:background="@drawable/gradient_right_left_background" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_bottom" />
    </FrameLayout>
</FrameLayout>