<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/toolbar" android:background="@color/colorGrayWhite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen8dp">
        <ImageButton android:id="@id/btnBack" android:background="@drawable/gradient_left_right_background" android:paddingLeft="@dimen/dimen10dp" android:paddingRight="@dimen/dimen10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" />
        <TextView android:textSize="@dimen/dimen20sp" android:textStyle="bold" android:textColor="@color/colorOrgane" android:layout_gravity="center" android:id="@id/txtTitle" android:paddingLeft="@dimen/dimen8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/changepassword" android:fontFamily="@font/altergothic" />
    </LinearLayout>
    <TextView android:textSize="@dimen/dimen20sp" android:textColor="@color/colorBlack" android:id="@id/txtVietnamese" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen20dp" android:text="@string/vietnamese" android:layout_below="@id/toolbar" android:fontFamily="@font/altergothic" />
    <android.support.v7.widget.SwitchCompat android:theme="@style/SwitchCompatStyle" android:id="@id/swVietnamese" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen8dp" android:layout_toRightOf="@id/txtVietnamese" android:layout_alignBaseline="@id/txtVietnamese" android:layout_alignParentRight="true" />
    <TextView android:textSize="@dimen/dimen20sp" android:textColor="@color/colorBlack" android:id="@id/txtEnglish" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen20dp" android:text="@string/english" android:layout_below="@id/txtVietnamese" android:fontFamily="@font/altergothic" />
    <android.support.v7.widget.SwitchCompat android:theme="@style/SwitchCompatStyle" android:id="@id/swEnglish" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen8dp" android:layout_toRightOf="@id/txtEnglish" android:layout_alignBaseline="@id/txtEnglish" android:layout_alignParentRight="true" />
    <FrameLayout android:background="@drawable/gradient_right_left_background" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_bottom" />
    </FrameLayout>
</RelativeLayout>